Add API key to .json scripts

--- a/public/locales/en/index.json
+++ b/public/locales/en/index.json
@@ -1,17 +1,1 @@
-{
-  "future_projects": "Future Projects",
-  "future_projects_subheading": "What we are working towards.",
-  "h1Title": "Operation Iranian Renaissance",
-  "mission": "Our Mission",
-  "mission_subheading": "How we seek to effect change.",
-  "protest_safely": "How To Protest Safely",
-  "protest_safely_subheading": "What should you do? What should you not do?",
-  "recent_pubs": "Recent Publications:",
-  "social_media_assets": "Distributive Materials",
-  "social_media_assets_subheading": "Use these pre-made social media posts to easily share our materials.",
-  "title": "Operation Iranian Renaissance",
-  "treat_wounds": "How to Treat Bleeding and Bullet Wounds",
-  "treat_wounds_subheading": "This guide is the result of the efforts of people who have both been trained and experienced street demonstrations, however, this is not an expert guide. This guide contains information that can be useful for rescuers and doctors; but most of the things mentioned in it are also applicable to ordinary readers. We suggest that the readers of this text also use other training related to the skills related to first aid and not only this guide.",
-  "values": "Our Values",
-  "values_subheading": "What we stand for."
-}
+{"title":"Operation Iranian Renaissance","values":"Our Values","h1Title":"Operation Iranian Renaissance","mission":"Our Mission","recent_pubs":"Recent Publications:","treat_wounds":"How to Treat Bleeding and Bullet Wounds","protest_safely":"How To Protest Safely","future_projects":"Future Projects","values_subheading":"What we stand for.","mission_subheading":"How we seek to effect change.","social_media_assets":"Distributive Materials","treat_wounds_subheading":"This guide is the result of the efforts of people who have both been trained and experienced street demonstrations, however, this is not an expert guide. This guide contains information that can be useful for rescuers and doctors; but most of the things mentioned in it are also applicable to ordinary readers. We suggest that the readers of this text also use other training related to the skills related to first aid and not only this guide.","protest_safely_subheading":"What should you do? What should you not do?","future_projects_subheading":"What we are working towards.","social_media_assets_subheading":"Use these pre-made social media posts to easily share our materials."}
