Set up nav, rtl direction, fix config error

--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -1,1 +1,9 @@
-{}
+{
+  "common": {
+    "donate": "اهدا کنید",
+    "home": "صفحه اصلی",
+    "mission": "ماموریت",
+    "persian": "فارسی",
+    "projects": "پروژه ها"
+  }
+}
