--- a/public/locales/en/mission.json
+++ b/public/locales/en/mission.json
@@ -1,16 +1,1 @@
-{
-  "mission": {
-    "mission_statement_domestic": "Domestic:",
-    "mission_statement_domestic_subheading": "To create easily available materials for Iranians to equip themselves with self defense tools and skills, increase pratical knowledge in how to better recognize and fight for their rights.",
-    "mission_statement_heading": "Mission:",
-    "mission_statement_international": "International: ",
-    "mission_statement_international_subheading": "leverage key stakeholders",
-    "values_democracy": "Liberal Democracy ",
-    "values_expression": "Free Expression ",
-    "values_pluralism": "Pluralism & Minority rights",
-    "values_secularism": "Secularism",
-    "values_statement_heading": "Our Values:",
-    "values_statement_subheading": "Our values are deeply interwoven into our mission and directly inform the focus of our projects. They guide our worldview and actions as a collective. ",
-    "values_territory": "Preserving the territorial integrity of Iran"
-  }
-}
+{"values_democracy":"Liberal Democracy ","values_pluralism":"Pluralism & Minority rights","values_territory":"Preserving the territorial integrity of Iran","values_expression":"Free Expression ","values_secularism":"Secularism","values_statement_heading":"Our Values:","mission_statement_heading":"Mission:","mission_statement_domestic":"Domestic:","values_statement_subheading":"Our values are deeply interwoven into our mission and directly inform the focus of our projects. They guide our worldview and actions as a collective. ","mission_statement_international":"International: ","mission_statement_domestic_subheading":"To create easily available materials for Iranians to equip themselves with self defense tools and skills, increase pratical knowledge in how to better recognize and fight for their rights.","mission_statement_international_subheading":"leverage key stakeholders"}
