Last push before backing up and trying MUI

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,9 +1,1 @@
-{
-  "common": {
-    "home": "Home",
-    "donate": "Donate",
-    "mission": "Mission",
-    "persian": "فارسی",
-    "projects": "Projects"
-  }
-}
+{"home":"Home","donate":"Donate","mission":"Mission","persian":"فارسی","projects":"Projects"}
