--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -1,9 +1,1 @@
-{
-  "common": {
-    "home": "صفحه اصلی",
-    "donate": "اهدا کنید",
-    "mission": "ماموریت",
-    "persian": "فارسی",
-    "projects": "پروژه ها"
-  }
-}
+{"home":"صفحه اصلی","donate":"اهدا کنید","mission":"ماموریت","persian":"فارسی","projects":"پروژه ها"}
