implement react-bootstrap

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,1 +1,1 @@
-{"home":"Home","donate":"Donate","mission":"Mission","persian":"فارسی","projects":"Projects"}
+{"home":"Home","donate":"Donate","follow":"Follow OpIrRen:","mission":"Mission","persian":"فارسی","projects":"Projects"}
