Took out plain bootstrap added login page begin donate page

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,1 +1,10 @@
-{"home":"Home","donate":"Donate","follow":"Follow OpIrRen:","mission":"Mission","persian":"فارسی","projects":"Projects"}
+{
+  "common": {
+    "home": "Home",
+    "donate": "Donate",
+    "follow": "Follow OpIrRen:",
+    "mission": "Mission",
+    "persian": "فارسی",
+    "projects": "Projects"
+  }
+}
