--- a/public/locales/fa/projects.json
+++ b/public/locales/fa/projects.json
@@ -1,1 +1,1 @@
-{"title":"انتشارات اخیر","title_subheading":"مواد مفید طراحی شده برای درک و توزیع آسان."}
+{"title":"انتشارات اخیر","future_projects":"پروژه های آینده","title_subheading":"مواد مفید طراحی شده برای درک و توزیع آسان.","future_projects_subheading":"ما می خواهیم الگوها و دستورالعمل هایی را برای ایرانیان دارای تابعیت دوگانه ایجاد کنیم تا با نمایندگان محلی و ملی خود تماس بگیرند و آنها را تحت فشار قرار دهند تا تغییرات سیاست خارجی را اعمال کنند که آینده ای لیبرال و مرفه را برای ایران به ارمغان می آورد."}
