Fixing hydration errors

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,10 +1,1 @@
-{
-  "common": {
-    "home": "Home",
-    "donate": "Donate",
-    "follow": "Follow OpIrRen:",
-    "mission": "Mission",
-    "persian": "فارسی",
-    "projects": "Projects"
-  }
-}
+{"donate":"Donate","download_img":"Download the Images","download_pdf":"Download the PDF","follow":"Follow OpIrRen:","home":"Home","learn_more":"Learn More","mission":"Mission","persian":"فارسی","projects":"Projects"}
