--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -1,10 +1,1 @@
-{
-  "common": {
-    "home": "صفحه اصلی",
-    "donate": "اهدا کنید",
-    "follow": "OpIrRen را دنبال کنید:",
-    "mission": "ماموریت",
-    "persian": "فارسی",
-    "projects": "پروژه ها"
-  }
-}
+{"donate":"اهدا کنید","download_img":"تصاویر را دانلود کنید","download_pdf":"پی دی اف را دانلود کنید","follow":" :را دنبال کنید OpIrRen ","home":"صفحه اصلی","learn_more":"بیشتر بدانید","mission":"ماموریت","persian":"فارسی","projects":"پروژه ها"}
