--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -1,1 +1,13 @@
-{"donate":"اهدا کنید","download_img":"تصاویر را دانلود کنید","download_pdf":"پی دی اف را دانلود کنید","follow":" :را دنبال کنید OpIrRen ","home":"صفحه اصلی","learn_more":"بیشتر بدانید","mission":"ماموریت","persian":"فارسی","projects":"پروژه ها"}
+{
+  "common": {
+    "donate": "اهدا کنید",
+    "download_img": "تصاویر را دانلود کنید",
+    "download_pdf": "پی دی اف را دانلود کنید",
+    "follow": " :را دنبال کنید OpIrRen ",
+    "home": "صفحه اصلی",
+    "learn_more": "بیشتر بدانید",
+    "mission": "ماموریت",
+    "persian": "فارسی",
+    "projects": "پروژه ها"
+  }
+}
