Adding new pages new strings starting to add postgres

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,8 +6,10 @@
     "follow": "Follow OpIrRen:",
     "home": "Home",
     "learn_more": "Learn More",
+    "log_out": "Log Out",
     "mission": "Mission",
     "persian": "فارسی",
-    "projects": "Projects"
+    "projects": "Projects",
+    "sign_in": "Sign in"
   }
 }
