--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -6,8 +6,10 @@
     "follow": " :را دنبال کنید OpIrRen ",
     "home": "صفحه اصلی",
     "learn_more": "بیشتر بدانید",
+    "log_out": "خروج",
     "mission": "ماموریت",
     "persian": "فارسی",
-    "projects": "پروژه ها"
+    "projects": "پروژه ها",
+    "sign_in": "ورود"
   }
 }
