--- a/public/locales/en/register.json
+++ b/public/locales/en/register.json
@@ -1,1 +1,1 @@
-{"email":"Your Email","login_link":"Already registered? Log in!","name":"Your Name","pw":"Password","register":"Register","signup":"Sign Up"}
+{"pw":"Password","name":"Your Name","email":"Your Email","signup":"Sign Up","register":"Register","login_link":"Already registered? Log in!"}
