--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -1,15 +1,15 @@
 {
   "common": {
-    "donate": "اهدا کنید",
-    "download_img": "تصاویر را دانلود کنید",
-    "download_pdf": "پی دی اف را دانلود کنید",
-    "follow": " :را دنبال کنید OpIrRen ",
     "home": "صفحه اصلی",
-    "learn_more": "بیشتر بدانید",
-    "log_out": "خروج",
+    "donate": "اهدا کنید",
+    "follow": " :را دنبال کنید OpIrRen ",
+    "log_out": "خارج شوید",
     "mission": "ماموریت",
     "persian": "فارسی",
+    "sign_in": "ورود",
     "projects": "پروژه ها",
-    "sign_in": "ورود"
+    "learn_more": "بیشتر بدانید",
+    "download_img": "تصاویر را دانلود کنید",
+    "download_pdf": "پی دی اف را دانلود کنید"
   }
 }
