--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -1,15 +1,1 @@
-{
-  "common": {
-    "home": "صفحه اصلی",
-    "donate": "اهدا کنید",
-    "follow": " :را دنبال کنید OpIrRen ",
-    "log_out": "خارج شوید",
-    "mission": "ماموریت",
-    "persian": "فارسی",
-    "sign_in": "ورود",
-    "projects": "پروژه ها",
-    "learn_more": "بیشتر بدانید",
-    "download_img": "تصاویر را دانلود کنید",
-    "download_pdf": "پی دی اف را دانلود کنید"
-  }
-}
+{"home":"صفحه اصلی","donate":"اهدا کنید","follow":" :را دنبال کنید OpIrRen ","log_out":"خارج شوید","mission":"ماموریت","persian":"فارسی","sign_in":"ورود","projects":"پروژه ها","learn_more":"بیشتر بدانید","download_img":"تصاویر را دانلود کنید","download_pdf":"پی دی اف را دانلود کنید"}
