Fixing design! almost done :)

--- a/public/locales/default/common.json
+++ b/public/locales/default/common.json
@@ -1,9 +1,15 @@
 {
   "common": {
     "donate": "Donate",
+    "download_img": "Download the Images",
+    "download_pdf": "Download the PDF",
+    "follow": "Follow OpIrRen:",
     "home": "Home",
+    "learn_more": "Learn More",
+    "log_out": "Log Out",
     "mission": "Mission",
     "persian": "فارسی",
-    "projects": "Projects"
+    "projects": "Projects",
+    "sign_in": "Sign in"
   }
 }
