--- a/public/locales/fa/Donate.json
+++ b/public/locales/fa/Donate.json
@@ -1,1 +1,1 @@
-{"donate_btn":"اهدا کنید"}
+{"donate_btn":"اهدا کنید","donate_description":"با همکاری شما، عملیات رنسانس ایرانیان می تواند باعث گسترش عملیات هایمان برای ایجاد موارد قابل اجرا و عملی برای ایرانیان داخل و خارج از کشور باشد.\nلطفاً از کار ما حمایت کنید"}
