--- a/public/locales/fa/common.json
+++ b/public/locales/fa/common.json
@@ -1,1 +1,15 @@
-{"home":"صفحه اصلی","donate":"اهدا کنید","follow":" :را دنبال کنید OpIrRen ","log_out":"خارج شوید","mission":"ماموریت","persian":"فارسی","sign_in":"ورود","projects":"پروژه ها","learn_more":"بیشتر بدانید","download_img":"تصاویر را دانلود کنید","download_pdf":"پی دی اف را دانلود کنید"}
+{
+  "common": {
+    "donate": "اهدا کنید",
+    "download_img": "تصاویر را دانلود کنید",
+    "download_pdf": "پی دی اف را دانلود کنید",
+    "follow": " :را دنبال کنید OpIrRen ",
+    "home": "صفحه اصلی",
+    "learn_more": "بیشتر بدانید",
+    "log_out": "خارج شوید",
+    "mission": "ماموریت",
+    "persian": "فارسی",
+    "projects": "پروژه ها",
+    "sign_in": "ورود"
+  }
+}
