--- a/public/locales/fa/register.json
+++ b/public/locales/fa/register.json
@@ -1,1 +1,1 @@
-{"pw":"کلمه عبور","name":"اسم شما","email":"ایمیل شما","signup":"ثبت نام","register":"ثبت نام","login_link":"قبلا ثبت نام کرده اید؟ وارد شوید!"}
+{"email":"ایمیل شما","login_link":"قبلا ثبت نام کرده اید؟ وارد شوید!","name":"اسم شما","pw":"کلمه عبور","register":"ثبت نام","signup":"ثبت نام"}
