--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,15 +1,1 @@
-{
-  "common": {
-    "donate": "Donate",
-    "download_img": "Download the Images",
-    "download_pdf": "Download the PDF",
-    "follow": "Follow OpIrRen:",
-    "home": "Home",
-    "learn_more": "Learn More",
-    "log_out": "Log Out",
-    "mission": "Mission",
-    "persian": "فارسی",
-    "projects": "Projects",
-    "sign_in": "Sign in"
-  }
-}
+{"home":"Home","donate":"Donate","follow":"Follow OpIrRen:","log_out":"Log Out","mission":"Mission","persian":"فارسی","sign_in":"Sign in","projects":"Projects","learn_more":"Learn More","download_img":"Download the Images","download_pdf":"Download the PDF"}
